# pupil_gazebo

./: CMakeLists.txt  README.md  package.xml
include/rs_plugin/: RealSensePlugin.h  r200_ros_plugin.h
launch/: gazebo.launch  plugin_test.launch  rviz.launch
models/realsense_camera/: model.config  model.sdf
rviz/: gazebo.rviz  pupil_gazebo.rviz
src/rs_plugin/: RealSensePlugin.cpp  r200_ros_plugin.cpp
worlds/: simple_test.world
